# soma-collector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exe.flags  include.flags  initial-setup.json  spack.yaml  spack.yaml.lumi  spack.yaml.summit
examples/: CMakeLists.txt  admin.cpp  client.cpp  client.cpp.old  proc_monitor.cpp  rp_monitor.cpp  server.cpp  test-run.sh
examples/lulesh/: Makefile  lulesh.cc  test_symbiomon.ipynb
examples/lulesh-inst/: CMakeCache.txt  CMakeLists.txt  Makefile  README  lulesh.cc  soma_plugin.cc  soma_plugin.h
examples/lulesh-inst/.spack-env/: view
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/: mahti-login12.mahti.csc.fi-linux-rhel8-x86_64_v3-gcc@9.4.0-conduit-nm6ma2xtmdwfk5n4r4nkwdvm6rjzvmd4.cmake
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/.spack/argobots/: install_environment.json  install_manifest.json  install_times.json  spack-build-01-autoreconf-out.txt  spack-build-02-configure-out.txt  spack-build-03-build-out.txt  spack-build-04-install-out.txt  spack-build-env.txt  spack-build-out.txt  spack-configure-args.txt  spec.json
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/.spack/boost/: install_environment.json  install_manifest.json  install_times.json  spack-build-01-install-out.txt  spack-build-env.txt  spack-build-out.txt  spec.json
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/.spack/bzip2/: install_environment.json  install_manifest.json  install_times.json  spack-build-01-install-out.txt  spack-build-env.txt  spack-build-out.txt  spec.json
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/.spack/cereal/: install_environment.json  install_manifest.json  install_times.json  spack-build-01-cmake-out.txt  spack-build-02-build-out.txt  spack-build-03-install-out.txt  spack-build-env.txt  spack-build-out.txt  spack-configure-args.txt  spec.json
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/etc/: iwpmd.conf  srp_daemon.conf
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/include/: H5ACpublic.h  H5Apublic.h  H5Cpublic.h  H5Dpublic.h  H5Epubgen.h  H5Epublic.h  H5FDcore.h  H5FDdirect.h  H5FDfamily.h  H5FDhdfs.h  H5FDlog.h  H5FDmpi.h  H5FDmpio.h  H5FDmulti.h  H5FDpublic.h  H5FDros3.h  H5FDs3comms.h  H5FDsec2.h  H5FDstdio.h  H5FDwindows.h  H5Fpublic.h  H5Gpublic.h  H5Ipublic.h  H5Lpublic.h  H5MMpublic.h  H5Opublic.h  H5PLextern.h  H5PLpublic.h  H5Ppublic.h  H5Rpublic.h  H5Spublic.h  H5Tpublic.h  H5Zpublic.h  H5api_adpt.h  H5overflow.h  H5pubconf.h  H5public.h  H5version.h  abt-io.h  abt.h  (+85 more)
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/lib/: libabt-io.so.0  libabt-io.so.0.0.0  libabt.so.1  libabt.so.1.1.0  libbedrock-client.so.0  libbedrock-client.so.0.5.2  libbedrock-server.so.0  libbedrock-server.so.0.5.2  libboost_atomic-mt.so.1.80.0  libboost_atomic.so.1.80.0  libboost_chrono-mt.so.1.80.0  libboost_chrono.so.1.80.0  libboost_date_time-mt.so.1.80.0  libboost_date_time.so.1.80.0  libboost_filesystem-mt.so.1.80.0  libboost_filesystem.so.1.80.0  libboost_graph-mt.so.1.80.0  libboost_graph.so.1.80.0  libboost_iostreams-mt.so.1.80.0  libboost_iostreams.so.1.80.0  libboost_locale-mt.so.1.80.0  libboost_locale.so.1.80.0  libboost_log-mt.so.1.80.0  libboost_log.so.1.80.0  libboost_log_setup-mt.so.1.80.0  libboost_log_setup.so.1.80.0  libboost_prg_exec_monitor-mt.so.1.80.0  libboost_prg_exec_monitor.so.1.80.0  libboost_program_options-mt.so.1.80.0  libboost_program_options.so.1.80.0  libboost_random-mt.so.1.80.0  libboost_random.so.1.80.0  libboost_regex-mt.so.1.80.0  libboost_regex.so.1.80.0  libboost_serialization-mt.so.1.80.0  libboost_serialization.so.1.80.0  libboost_system-mt.so.1.80.0  libboost_system.so.1.80.0  libboost_thread-mt.so.1.80.0  libboost_thread.so.1.80.0  (+75 more)
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/lib64/: libefa.so.1  libefa.so.1.1.41.0  libibmad.so.5  libibmad.so.5.3.41.0  libibnetdisc.so.5  libibnetdisc.so.5.0.41.0  libibumad.so.3  libibumad.so.3.2.41.0  libibverbs.so.1  libibverbs.so.1.14.41.0  libjson-c.so.5  libjson-c.so.5.2.0  libmlx4.so.1  libmlx4.so.1.0.41.0  libmlx5.so.1  libmlx5.so.1.23.41.0  librdmacm.so.1  librdmacm.so.1.3.41.0  libspdlog.so.1  libspdlog.so.1.10.0
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/libexec/: truescale-serdes.cmds
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/sbin/: check_lft_balance.pl  dump_fts  dump_lfts.sh  dump_mfts.sh  ibacm  ibaddr  ibcacheedit  ibccconfig  ibccquery  ibfindnodesusing.pl  ibhosts  ibidsverify.pl  iblinkinfo  ibnetdiscover  ibnodes  ibping  ibportstate  ibqueryerrors  ibroute  ibrouters  ibsrpdm  ibstat  ibstatus  ibswitches  ibsysstat  ibtracert  iwpmd  perfquery  rdma-ndd  run_srp_daemon  saquery  sminfo  smpdump  smpquery  srp_daemon  srp_daemon.sh  vendstat
examples/lulesh-inst/.spack-env/._view/k6kusl6zouvllzzsmvttvuqiipmwnqjg/share/: COPYING  RELEASE.txt  USING_HDF5_CMake.txt
examples/lulesh-inst/.spack-env/repos/mochi/: repo.yaml
examples/lulesh-inst/mahti_run_script/: app-run.sh  cleanup.sh  small-run.sh
examples/lulesh-split/: CMakeLists.txt  Makefile  cleanup.sh  lulesh.cc  lulesh.h
examples/lulesh-split/mahti_run_script/: cleanup.sh  lulesh2.0  small-run.sh  small-run2.sh  sourceme.sh
examples/lulesh/laptop_run_script/: small-run.sh
examples/lulesh/mahti_run_script/: app-run.sh  cleanup.sh  lulesh2.0  small-run.sh
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  CollectorHandle.cpp  CollectorHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  alpha-admin.pc.in  alpha-client.pc.in  alpha-config.cmake.in  alpha-server.pc.in  soma-admin.pc.in  soma-client.pc.in  soma-config.cmake.in  soma-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  CollectorTest.cpp  Main.cpp  ResourceTest.cpp
(+23691 files in other folders)
